Bux fixes for overlapping UI in dashboard

--- a/FED/assignment/src/component/dashboard/dashboard.scss
+++ b/FED/assignment/src/component/dashboard/dashboard.scss
@@ -25,6 +25,7 @@
 
     .dashboard-container {
         grid-template-columns: auto;
+        grid-auto-rows: 2220px;
     }
 
     .item1 {
